# penv

./: Cargo.toml  PKGBUILD  README.md
.github/workflows/: release.yml
src/: cli.rs  config.rs  main.rs  network.rs
