[package]
name = "penv"
version = "0.1.0"
edition = "2021"
description = "Pentester Environment - manage network and customer-specific environment variables across shell sessions"
license = "MIT"

[[bin]]
name = "penv"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
dirs = "5"
anyhow = "1"

[dev-dependencies]
tempfile = "3"
